<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_general"
        android:key="pref_general">

        <CheckBoxPreference
            android:key="pref_sync"
            android:title="@string/pref_sync"
            android:defaultValue="True"
            android:summary="@string/pref_sync_summary" />

        <ListPreference
            android:key="pref_viewing"
            android:title="@string/pref_viewing"
            android:summary="@string/pref_viewing_summary"
            android:defaultValue="200"
            android:entries="@array/syncInterval"
            android:entryValues="@array/syncIntervalValues"
            android:dependency="pref_sync"
            />
    </PreferenceCategory>

</PreferenceScreen>