<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".account.EditProfileActivity">
    <item
        android:id="@+id/action_edit_photo"
        android:icon="@drawable/ic_camera"
        android:title="@string/menu_camera"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit_password"
        android:icon="@drawable/ic_lock"
        android:title="@string/menu_password"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit_email"
        android:icon="@drawable/ic_email"
        android:title="@string/menu_email"
        app:showAsAction="ifRoom" />
</menu>
