<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.xiberty.warpp.contrib.views.XTextView
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_welcome"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/big_title"
            android:gravity="center"
            android:layout_marginTop="120dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/console"
            android:id="@+id/imageView"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:contentDescription="@string/img_logo" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:paddingBottom="30dp">


        <com.xiberty.warpp.contrib.views.XTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_start_message"
            android:gravity="center"
            android:lines="1"
            android:paddingBottom="21dp"
            android:textColor="@color/primaryText" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp">

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btnSignUp"
                style="@style/Button.Start"
                android:layout_marginRight="@dimen/spacing_micro"

                app:fb_defaultColor="@color/colorAccent"
                app:fb_focusColor="@color/colorAccentLight"
                app:fb_fontIconResource="&#xf234;"
                app:fb_fontIconSize="@dimen/text_big"

                app:fb_iconPaddingRight="@dimen/spacing_normal_extra"
                app:fb_iconPosition="left"
                app:fb_radius="@dimen/spacing_micro"
                app:fb_text="@string/button_register"
                app:fb_textColor="@color/white"

                app:fb_textSize="@dimen/text_regular"
                tools:targetApi="lollipop" />


            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btnSignIn"
                style="@style/Button.Start"
                android:layout_marginLeft="@dimen/spacing_micro"

                app:fb_defaultColor="@color/colorAccentAltern"
                app:fb_focusColor="@color/colorAccentAlternLight"
                app:fb_fontIconResource="&#xf090;"
                app:fb_fontIconSize="@dimen/text_big"

                app:fb_iconPaddingRight="@dimen/spacing_normal_extra"
                app:fb_iconPosition="left"
                app:fb_radius="@dimen/spacing_micro"
                app:fb_text="@string/button_login"
                app:fb_textColor="@color/white"

                app:fb_textSize="@dimen/text_regular"
                tools:targetApi="lollipop" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
