<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <include layout="@layout/progressbar" />

    <FrameLayout
        android:id="@+id/framelogo"
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/console"
            android:id="@+id/imageView"
            android:layout_gravity="center" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_below="@+id/framelogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        tools:ignore="ContentDescription">

        <com.xiberty.warpp.contrib.views.XTextView
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_new_user"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/title_regular"
            android:gravity="center"

            android:layout_marginBottom="@dimen/spacing_double" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/secondaryText"
            android:textColor="@color/textIcons">

            <com.xiberty.warpp.contrib.views.XEditText
                style="@style/Input.Auth"
                android:text="noob"
                android:hint="@string/label_username"
                android:maxLength="25"
                android:drawableLeft="@drawable/ic_profile"
                android:id="@+id/txtUsername" />

        </android.support.design.widget.TextInputLayout>

        <View
            style="@style/View.Auth"
            android:layout_marginBottom="@dimen/spacing_regular" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/secondaryText"
            android:textColor="@color/textIcons">

            <com.xiberty.warpp.contrib.views.XEditText
                style="@style/Input.Auth"
                android:text="noob@boog.com"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_email"
                android:id="@+id/txtEmail" />

        </android.support.design.widget.TextInputLayout>

        <View
            style="@style/View.Auth"
            android:layout_marginBottom="@dimen/spacing_regular" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/secondaryText"
            android:textColor="@color/textIcons">

            <com.xiberty.warpp.contrib.views.XEditText
                style="@style/Input.Auth"
                android:text="rampagegear"
                android:hint="@string/label_password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock"
                android:id="@+id/txtPassword" />

        </android.support.design.widget.TextInputLayout>

        <View
            style="@style/View.Auth"
            android:layout_marginBottom="@dimen/spacing_double" />


        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnRegister"
            style="@style/Button.Auth"


            app:fb_defaultColor="@color/colorAccent"
            app:fb_focusColor="@color/colorAccentLight"
            app:fb_fontIconResource="&#xf058;"
            app:fb_fontIconSize="@dimen/text_big"

            app:fb_iconPaddingRight="@dimen/spacing_normal_extra"
            app:fb_iconPosition="left"
            app:fb_radius="@dimen/spacing_micro"
            app:fb_text="@string/button_register"
            app:fb_textColor="@color/white"

            app:fb_textSize="@dimen/text_regular"
            tools:targetApi="lollipop" />

    </LinearLayout>

    <TextView
        android:id="@+id/goLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:padding="@dimen/spacing_regular"
        android:gravity="center"
        android:text="@string/label_go_login"
        android:textColor="@color/colorAccentAlternLight"
        android:textSize="@dimen/text_standar"
        android:textStyle="normal|bold" />


</RelativeLayout>




