<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutMainContainer">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/city_black"/>

    <include layout="@layout/progressbar_horizontal" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ContentDescription">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ave"
                android:id="@+id/imageView"
                android:tint="@color/white"
                android:layout_gravity="center" />
        </FrameLayout>

        <com.xiberty.propongo.contrib.views.XTextView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:textColor="@color/white"
            android:textSize="@dimen/title_regular"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/spacing_double" />

        <com.xiberty.propongo.contrib.views.XEditText
            style="@style/Input.Auth"

            android:hint="@string/label_user_or_email"
            android:maxLength="25"
            android:drawableLeft="@drawable/ic_profile"
            android:id="@+id/txtUser" />


        <View style="@style/View.Auth" />

        <com.xiberty.propongo.contrib.views.XEditText
            style="@style/Input.Auth"
            android:hint="@string/label_password"
            android:drawableLeft="@drawable/ic_lock"
            android:id="@+id/txtPassword"
            android:inputType="textPassword"
             />

        <View style="@style/View.Auth" />

        <LinearLayout
            android:layout_marginTop="@dimen/spacing_regular"
            android:id="@+id/linearII"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginBottom="@dimen/spacing_double"
            android:layout_marginLeft="@dimen/auth_button_spacing"
            android:layout_marginRight="@dimen/auth_button_spacing">



            <TextView
                android:layout_weight="1.2"
                android:id="@+id/lblForgotPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/label_forgot_password"
                android:textColor="@color/divider"
                android:textSize="@dimen/text_standar"
                android:tint="@color/white"
                android:gravity="right|center_vertical"
                android:textStyle="normal|bold" />


        </LinearLayout>


        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnEnter"
            style="@style/Button.Auth"

            app:fb_defaultColor="@color/colorAccent"
            app:fb_focusColor="@color/colorAccentLight"
            app:fb_fontIconResource="&#xf058;"
            app:fb_fontIconSize="@dimen/text_big"

            app:fb_iconPaddingRight="@dimen/spacing_normal_extra"
            app:fb_iconPosition="left"
            app:fb_radius="@dimen/spacing_micro"
            app:fb_text="@string/button_login"
            app:fb_textColor="@color/white"

            app:fb_textSize="@dimen/text_regular"
            tools:targetApi="lollipop" />


        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnFacebookLogin"
            style="@style/Button.Auth"

            app:fb_defaultColor="@color/facebook_default"

            app:fb_focusColor="@color/facebook_focus"
            app:fb_fontIconResource="&#xf230;"

            app:fb_fontIconSize="@dimen/text_big"
            app:fb_iconPaddingRight="@dimen/spacing_normal_extra"
            app:fb_iconPosition="left"

            app:fb_radius="@dimen/spacing_micro"
            app:fb_text="@string/button_facebook_login"
            app:fb_textColor="@color/white"
            app:fb_textSize="@dimen/text_regular"
            tools:targetApi="lollipop" />

    </LinearLayout>

    <TextView
        android:id="@+id/goRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:padding="@dimen/spacing_regular"
        android:gravity="center"
        android:text="@string/label_go_register"
        android:textColor="@color/colorAccentAlternLight"
        android:textSize="@dimen/text_standar"
        android:textStyle="normal|bold" />


</RelativeLayout>
