<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/progressbar" />

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="60sp"
                android:paddingLeft="@dimen/activity_padding"
                android:paddingRight="@dimen/activity_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_half_margin"
                    android:text="@string/hint_proposal_title"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtProposalTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_half_margin"
                    android:text="@string/hint_proposal_summary"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtProposalSummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:ems="10"
                    android:inputType="textMultiLine" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_half_margin"
                    android:text="@string/hint_choose_councilman"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerCouncilman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_half_margin" />

                <TextView
                    android:id="@+id/txtComissions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_half_margin"
                    android:paddingLeft="@dimen/activity_half_margin"
                    android:paddingRight="@dimen/activity_half_margin" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:background="@color/silver" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_proposal_attachs"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/path_attach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnSendProposal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/send_proposal"
            android:background="@color/colorAccent"
            android:textColor="#fff"/>
    </RelativeLayout>
</LinearLayout>
