<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    >

    <include layout="@layout/progressbar" />
    <include layout="@layout/toolbar_with_back" />


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        tools:ignore="ContentDescription">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/console" />
        </FrameLayout>

        <com.xiberty.propongo.contrib.views.XTextView
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_reset_password"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/title_regular"
            android:gravity="center"

            android:layout_marginBottom="@dimen/spacing_double" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/secondaryText"
            android:textColor="@color/textIcons">

            <com.xiberty.propongo.contrib.views.XEditText
                style="@style/Input.Auth"
                android:hint="@string/label_user_or_email"
                android:drawableLeft="@drawable/ic_email"
                android:id="@+id/txtUser" />

        </android.support.design.widget.TextInputLayout>

        <View
            style="@style/View.Auth"
            android:layout_marginBottom="@dimen/spacing_double" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnSend"
            style="@style/Button.Auth"


            app:fb_defaultColor="@color/colorAccent"
            app:fb_focusColor="@color/colorAccentLight"
            app:fb_fontIconResource="&#xf1d8;"
            app:fb_fontIconSize="@dimen/text_big"

            app:fb_iconPaddingRight="@dimen/spacing_normal_extra"
            app:fb_iconPosition="left"
            app:fb_radius="@dimen/spacing_micro"
            app:fb_text="@string/button_send"
            app:fb_textColor="@color/white"

            app:fb_textSize="@dimen/text_regular"
            tools:targetApi="lollipop" />


    </LinearLayout>



</RelativeLayout>
